--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -1,12 +1,8 @@
 /* Add application styles & imports to this file! */
 
-p {
-  font-family: Lato;
-}
-
 .example-viewport {
   height: 200px;
-  width: 500px;
+  width: 100%;
   border: 1px solid black;
 }
 
@@ -16,14 +12,25 @@ p {
   justify-content: flex-start;
   align-items: center;
   gap: 1rem;
-  padding: 0 1rem;
+  padding: 0 1rem 0 0;
   height: 50px;
 }
 
 .example-item + .example-item {
-  border-top: 1px solid darkblue;
+  border-top: 1px solid darkgray;
 }
 
-.loading {
+.example-item.loading {
   color: darkgray;
+  padding: 0 1rem;
+}
+
+.example-item > .page {
+  display: grid;
+  height: 100%;
+  min-width: 5rem;
+  padding: 0 1rem;
+  background-color: crimson;
+  align-items: center;
+  justify-content: end;
 }
